--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <title>Flashcard</title>
 </head>
 <body>
-    <main> 
-
+    <main>
+         <section id="container">
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    
+                </div>
+            </article>
+         </section>
     </main>
     <footer>
         <p>Projeto desenvolvido pela Alura sem fins lucrativos</p>
