--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
                     <h3>Programação</h3>
                     <div class="cartao__conteudo__pergunta">
                         O que é JavaScript?
+                        <div class="cartao__conteudo__resposta">
+                            O JavaScript é uma linguagem de programação.
+                        </div>
                     </div>
                 </div>
             </article>
