--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     content="width=device-width, initial-scale=1.0">
     
   <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap">
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Flashcard</title>
 </head>
 <body>
