--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                 <div class="cartao__conteudo">
                     <h3>Programação</h3>
                     <div class="cartao__conteudo__pergunta">
-                        O que é JavaScript?
+                        <p>que é JavaScript?</p>
                         <div class="cartao__conteudo__resposta">
-                            O JavaScript é uma linguagem de programação.
+                            <p>O JavaScript é uma linguagem de programação.</p>
                         </div>
                     </div>
                 </div>
@@ -27,9 +27,9 @@
                 <div class="cartao__conteudo">
                     <h3>Programação</h3>
                     <div class="cartao__conteudo__pergunta">
-                        O que é CSS?
+                        <p>O que é CSS?</p>
                         <div class="cartao__conteudo__resposta">
-                            O CSS é uma linguagem de estilização.
+                        <p>O CSS é uma linguagem de estilização.</p>
                         </div>
                     </div>
                 </div>
