--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
          <section id="container">
             <article class="cartao">
                 <div class="cartao__conteudo">
-                    <h3>Programação</h3>
+                    <h3>Digestão</h3>
                     <div class="cartao__conteudo__pergunta">
-                        <p>que é JavaScript?</p>
+                        <p>Que planta é usada em chás para aliviar cólicas e gases?</p>
                         <div class="cartao__conteudo__resposta">
-                            <p>O JavaScript é uma linguagem de programação.</p>
+                            <p>Camomila com erva-doce, por suas propriedades calmantes e digestivas.</p>
                         </div>
                     </div>
                 </div>
             </article>
              <article class="cartao">
                 <div class="cartao__conteudo">
-                    <h3>Programação</h3>
+                    <h3>Venenos</h3>
                     <div class="cartao__conteudo__pergunta">
-                        <p>O que é CSS?</p>
+                        <p>Que substância era adicionada a bebidas ou alimentos para envenenamento secreto?</p>
                         <div class="cartao__conteudo__resposta">
-                        <p>O CSS é uma linguagem de estilização.</p>
+                        <p> Beladona, cujos alcaloides causam alucinação, confusão mental e morte.</p>
                         </div>
                     </div>
                 </div>
