--- a/index.html
+++ b/index.html
@@ -34,6 +34,17 @@
                     </div>
                 </div>
             </article>
+             <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Cicatrização Natural</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        <p>Como se prepara um unguento natural para feridas leves?</p>
+                        <div class="cartao__conteudo__resposta">
+                        <p>Mistura-se babosa, mel e azeite morno. A aplicação ajuda na cicatrização e hidratação da pele.</p>
+                        </div>
+                    </div>
+                </div>
+            </article>
          </section>
     </main>
     <footer>
