--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                     <h3>Digestão</h3>
                     <div class="cartao__conteudo__pergunta">
                         <p>Que planta é usada em chás para aliviar cólicas e gases?</p>
+                        </div>
                         <div class="cartao__conteudo__resposta">
                             <p>Camomila com erva-doce, por suas propriedades calmantes e digestivas.</p>
                         </div>
