--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                     <h3>Venenos</h3>
                     <div class="cartao__conteudo__pergunta">
                         <p>Que substância era adicionada a bebidas ou alimentos para envenenamento secreto?</p>
+                        </div>
                         <div class="cartao__conteudo__resposta">
                         <p> Beladona, cujos alcaloides causam alucinação, confusão mental e morte.</p>
                         </div>
