--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                     <h3>Cicatrização Natural</h3>
                     <div class="cartao__conteudo__pergunta">
                         <p>Como se prepara um unguento natural para feridas leves?</p>
+                        </div>
                         <div class="cartao__conteudo__resposta">
                         <p>Mistura-se babosa, mel e azeite morno. A aplicação ajuda na cicatrização e hidratação da pele.</p>
                         </div>
