--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                 <div class="cartao__conteudo">
                     <h3>Venenos</h3>
                     <div class="cartao__conteudo__pergunta">
-                        <p>Que substância era adicionada a bebidas ou alimentos para envenenamento secreto?</p>
+                        <p>Que planta contém alcaloides que causam paralisia?</p>
                         </div>
                         <div class="cartao__conteudo__resposta">
-                            <p>Beladona, cujos alcaloides causam alucinação, confusão mental e morte./p>
+                            <p>Cicuta. Afeta o sistema nervoso e paralisa o corpo./p>
                         </div>
                     </div>
                 
