--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </article>
              <article class="cartao">
                 <div class="cartao__conteudo">
-                    <h3>Cicatrização</h3>
+                    <h3>Cicatrização natural</h3>
                     <div class="cartao__conteudo__pergunta">
                         <p>Como se prepara um unguento natural para feridas leves?</p>
                         </div>
