--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <p>Que planta contém alcaloides que causam paralisia?</p>
                         </div>
                         <div class="cartao__conteudo__resposta">
-                            <p>Cicuta. Afeta o sistema nervoso e paralisa o corpo./p>
+                            <p>Cicuta. Afeta o sistema nervoso e paralisa o corpo.</p>
                         </div>
                     </div>
                 
