--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </article>
              <article class="cartao">
                 <div class="cartao__conteudo">
-                    <h3>Digestão</h3>
+                    <h3>Chás Digestivos</h3>
                     <div class="cartao__conteudo__pergunta">
                         <p>Que planta é usada em chás para aliviar cólicas e gases?</p>
                         </div>
@@ -38,7 +38,7 @@
             </article>
              <article class="cartao">
                 <div class="cartao__conteudo">
-                    <h3>Cicatrização Natural</h3>
+                    <h3>Cicatrizante Natural</h3>
                     <div class="cartao__conteudo__pergunta">
                         <p>Como se prepara um unguento natural para feridas leves?</p>
                         </div>
@@ -46,6 +46,18 @@
                             <p>Mistura-se babosa, mel e azeite morno. A aplicação ajuda na cicatrização e hidratação da pele.</p>
                         </div>
                     </div>
+            </article>
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Venenos</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        <p>Que planta contém alcaloides que causam paralisia?</p>
+                        </div>
+                        <div class="cartao__conteudo__resposta">
+                            <p>Cicuta. Afeta o sistema nervoso e paralisa o corpo.</p>
+                        </div>
+                    </div>
+                
             </article>
          </section>
     </main>
