--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
             </article>
             <article class="cartao">
                 <div class="cartao__conteudo">
-                    <h3>Venenos</h3>
+                    <h3>Xaropes Naturais</h3>
                     <div class="cartao__conteudo__pergunta">
-                        <p>Que planta contém alcaloides que causam paralisia?</p>
+                        <p>O que vai num xarope pra tosse?</p>
                         </div>
                         <div class="cartao__conteudo__resposta">
-                            <p>Cicuta. Afeta o sistema nervoso e paralisa o corpo.</p>
+                            <p>Guaco, gengibre, limão e mel. Expectorante.</p>
                         </div>
                     </div>
                 
