--- a/index.html
+++ b/index.html
@@ -54,7 +54,19 @@
                         <p>O que vai num xarope pra tosse?</p>
                         </div>
                         <div class="cartao__conteudo__resposta">
-                            <p>Guaco, gengibre, limão e mel. Expectorante.</p>
+                            <p>Guaco, gengibre, limão e mell, com ação expectorante e anti-inflamatória.</p>
+                        </div>
+                    </div>
+                
+            </article>
+             <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Chás Calmantes</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        <p>Que chá é bom pra dormir?</p>
+                        </div>
+                        <div class="cartao__conteudo__resposta">
+                            <p>Chá de valeriana ou capim-limão, devido ao efeito calmante sobre o sistema nervoso.</p>
                         </div>
                     </div>
                 
