--- a/index.html
+++ b/index.html
@@ -71,6 +71,18 @@
                     </div>
                 
             </article>
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Dores Musculares</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        <p>O que passar pra dor muscular?</p>
+                        </div>
+                        <div class="cartao__conteudo__resposta">
+                            <p> Óleo de copaíba com extrato de arnica, pela ação anti-inflamatória e analgésica.</p>
+                        </div>
+                    </div>
+                
+            </article>
          </section>
     </main>
     <footer>
