--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <main>
          <section id="container">
-            <article class="cartao">
+           <!--<article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>Venenos</h3>
                     <div class="cartao__conteudo__pergunta">
@@ -23,7 +23,7 @@
                         </div>
                     </div>
                 
-            </article>         
+            </article> -->         
          </section>
     </main>
     <footer>
